[feat] #34 config server용 사용 신청 승인 내역 조회